cmake_minimum_required(VERSION 3.16)
project(Cmpe130)

set(CMAKE_CXX_STANDARD 20)

add_executable(Cmpe130 main.cpp infixpostfix.cpp infixpostfix.h faketree.cpp faketree.h sorts.cpp sorts.h tree.cpp tree.h redblack.h maze.cpp disjoint.cpp disjoint.h maze.h FloydWarshall.cpp FloydWarshall.h recursion_memoization.cpp recursion_memoization.h)